<resources>
    <string name="app_name">ShalatSunnah</string>
    <string name="tahajud">tahajud</string>
    <string name="witir">witir</string>
    <string name="rawatib">rawatib</string>
    <string name="dhuha">dhuha</string>
    <string name="istikhoroh">istikhoroh</string>
    <string name="tahiyyatulmasjid">tahiyyatulmasjid</string>
    <string name="shalatsyuruk">shalatsyuruk</string>
</resources>
