<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tahajud"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tahajud"
        android:gravity="center"
        android:layout_marginBottom="8dp"
        />

    <TextView
        android:id="@+id/witir"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/witir"
        android:gravity="center"
        android:layout_marginBottom="8dp"

        />

    <TextView
        android:id="@+id/rawatib"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/rawatib"
        android:gravity="center"
        android:layout_marginBottom="8dp"
        />

    <TextView
        android:id="@+id/dhuha"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dhuha"
        android:gravity="center"
        android:layout_marginBottom="8dp"
        />

    <TextView
        android:id="@+id/istikhoroh"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/istikhoroh"
        android:gravity="center"
        android:layout_marginBottom="8dp"
        />

    <TextView
        android:id="@+id/tahiyyatulmasjid"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tahiyyatulmasjid"
        android:gravity="center"
        android:layout_marginBottom="8dp"
        />

    <TextView
        android:id="@+id/shalatsyuruk"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/shalatsyuruk"
        android:gravity="center"/>

</LinearLayout>